--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,24 +17,24 @@ header {
 
 header p {
   display: inline-block;
-  color: #222;
   float: left;
   clear: both;
-  padding: 5px 5px 5px 15px;
+  padding: 5px 15px 5px 5px;
   width: 192px;
 }
 
 footer, header p {
   background-color: #111;
+  color: #eee;
 }
 
-a, section#users p {
+a, section#users p:hover, section#users p.selected {
   background-color: #38f1b6;
   color: #111;
   text-decoration: none;
 }
 
-a:hover, section#users p:hover {
+a:hover {
   background-color: #fff;
   color: #888
 }
@@ -84,10 +84,9 @@ section#users p span {
 }
 
 section#messages {
-  background-color: #f00;
+  background-color: #eee;
   bottom: 42px;
   position: fixed;
-  min-height: 300px;
   top: 0;
   overflow: auto;
   padding: 10px;
@@ -103,6 +102,7 @@ section#messages h1 {
 #new {
   bottom: 0;
   padding: 2px;
+  display: none;
   position: absolute;
   left: 0;
   right: 10px;
@@ -112,7 +112,7 @@ section#messages h1 {
   border: 1px solid #111;
   font-family: Helvetica, Arial, sans-serif;
   resize: none;
-  height: 97px;
+  height: 93px;
   padding: 5px;
   width: 80%;
 }
