--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html
     link(rel='stylesheet', href='/css/reset.css')
     link(rel='stylesheet', href='/css/main.css')
 
-  body(data-me='#{me}')
+  body(data-me='#{me}', data-server='#{socketServer}')
     header
       p RWRrD
     .wrapper
@@ -16,6 +16,6 @@ html
     footer
       section
         block footer
-    script(type='text/javascript', src='/socket.io/socket.io.js', defer)
+    script(type='text/javascript', src='/js/socket.io.js', defer)
     script(type='text/javascript', src='/js/jquery.js', defer)
     script(type='text/javascript', src='/js/main.js', defer)
