--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,6 +117,39 @@ section#messages h1 {
   width: 80%;
 }
 
+.feed li {
+  background-color: #fff;
+  margin-bottom: 5px;
+  box-shadow: none;
+  position: relative;
+  width: 100%;
+  padding: 8px 0;
+}
+
+.feed li p {
+  font-size: 1.2rem;
+  min-height: 122px;
+  margin-left: 160px;
+}
+
+.feed li .avatars {
+  float: left;
+  height: 40px;
+  width: 100px;
+  position: relative;
+}
+
+.feed li .avatars div {
+  height: 70px;
+  width: 150px;
+  overflow: hidden;
+  position: relative;
+}
+
+.feed li img {
+  margin-top: -20px;
+}
+
 footer {
   bottom: 0;
   position: fixed;
