--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
     input#search(autocomplete='off', placeholder='SEARCH')
   section#messages
     h1
-    .feed
+    ol.feed
     form#new(method='POST')
       input(type='checkbox', name='public')
       span make public? (defaults to private)
