--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,9 @@ block content
     input#search(autocomplete='off', placeholder='SEARCH')
   section#messages
     h1
+    #actions
+      button#public-btn public
+      button#private-btn private
     ol.feed
     form#new(method='POST')
       input(type='checkbox', name='public')
@@ -14,8 +17,3 @@ block content
       input(type='hidden', name='senderAvatar', id='sender-avatar')
       input(type='hidden', name='receiverAvatar', id='receiver-avatar')
       button(type='submit') send
-
-block footer
-  p
-    | All code is hosted on&#xa0;
-    a(href='http://github.com/ednapiranha/rwrd-client.git') Github
