--- a/views/index.jade
+++ b/views/index.jade
@@ -1,14 +1,14 @@
 extend layout
 
 block content
+  input#search(autocomplete='off', placeholder='SEARCH')
   section#users
-    input#search(autocomplete='off', placeholder='SEARCH')
   section#messages
-    h1
-    #actions
-      button#public-btn public
-      button#private-btn private
-    ol.feed
+    .subheader
+      h1
+      #actions
+        button#public-btn public
+        button#private-btn private
     form#new(method='POST')
       input(type='checkbox', name='public')
       span make public? (defaults to private)
@@ -17,3 +17,4 @@ block content
       input(type='hidden', name='senderAvatar', id='sender-avatar')
       input(type='hidden', name='receiverAvatar', id='receiver-avatar')
       button(type='submit') send
+    ol.feed
