--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,6 +54,7 @@ section, footer, header {
 
 .subheader {
   background-color: rgba(255, 255, 255, 0.8);
+  display: none;
   height: 44px;
   position: fixed;
   top: 0;
@@ -140,6 +141,7 @@ section#messages h1 {
 }
 
 #new {
+  display: none;
   padding: 53px 10px 5px 10px;
   width: 90%;
 }
