--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title rwrrd
+    title rvlvvr
     meta(content='width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0', name='viewport')
     meta(content='yes', name='apple-mobile-web-app-capable')
     link(rel='stylesheet', href='/css/reset.css')
@@ -9,10 +9,11 @@ html
 
   body(data-me='#{me}', data-server='#{socketServer}')
     header
-      p RWRrD
+      p rvlvvr
     .wrapper
       block content
 
     script(type='text/javascript', src='/js/socket.io.js', defer)
     script(type='text/javascript', src='/js/jquery.js', defer)
+    script(type='text/javascript', src='/js/moment.js', defer)
     script(type='text/javascript', src='/js/main.js', defer)
