--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,4 @@ html
     .wrapper
       block content
 
-    script(type='text/javascript', src='/js/socket.io.js', defer)
-    script(type='text/javascript', src='/js/jquery.js', defer)
-    script(type='text/javascript', src='/js/moment.js', defer)
-    script(type='text/javascript', src='/js/main.js', defer)
+    script(type='text/javascript', src='/js/bundle.js', defer)
