--- a/views/index.jade
+++ b/views/index.jade
@@ -19,4 +19,4 @@ block content
       input(type='hidden', name='senderAvatar', id='sender-avatar')
       input(type='hidden', name='receiverAvatar', id='receiver-avatar')
       button(type='submit') send
-    ol.feed
+    ol#feed
