--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,12 +55,12 @@ section, footer, header {
 }
 
 .subheader {
-  background-color: rgba(1, 1, 1, 0.8);
-  display: none;
+  background-color: #111;
+  border-left: 5px solid #fff;
   height: 44px;
   position: fixed;
   top: 0;
-  left: 218px;
+  left: 212px;
   right: 0;
   z-index: 3;
 }
@@ -72,26 +72,25 @@ section, footer, header {
   font-size: 1.2rem;
   clear: both;
   float: left;
-  width: 209px;
+  width: 201px;
+  position: fixed;
+  top: 43px;
+  padding: 0 5px;
+  left: 0;
 }
 
 section#users, section#messages, #search {
   clear: none;
 }
 
-#search {
-  position: fixed;
-  top: 45px;
-  left: 0;
-}
-
 .info {
-  padding: 20px;
+  padding: 70px 20px 20px 20px;
 }
 
 .loading {
   padding: 10px;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
+  font-weight: 500;
 }
 
 .info h2 {
@@ -104,6 +103,15 @@ section#users, section#messages, #search {
   font-size: 1.9rem;
 }
 
+.separator {
+  position: fixed;
+  left: 212px;
+  top: 0;
+  bottom: 0;
+  width: 5px;
+  background-color: #111;
+}
+
 section#users {
   background-color: #fff;
   margin-bottom: 10px;
@@ -111,7 +119,7 @@ section#users {
   position: fixed;
   bottom: 0;
   overflow: auto;
-  top: 74px;
+  top: 70px;
 }
 
 section#users p {
@@ -127,21 +135,20 @@ section#users p span {
   color: #111;
   font-size: 1.3rem;
   line-height: 1.1rem;
-  display:  inline-block;
+  display: inline-block;
   bottom: 0;
   left: 0;
   position: absolute;
-  padding: 2px;
+  padding: 2px 5px;
   z-index: 2;
-  width: 196px;
+  width: 190px;
 }
 
 section#messages {
-  border-left: 5px solid #111;
   position: relative;
   width: 680px;
-  margin-left: 212px;
-  height: 200%;
+  margin-left: 211px;
+  height: 100%;
 }
 
 section#messages h1 {
@@ -160,10 +167,22 @@ section#messages h1 {
 #new textarea {
   border: 1px solid #111;
   font-family: Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.2rem;
   resize: none;
-  height: 85px;
+  height: 82px;
   padding: 5px;
   width: 80%;
+}
+
+#new textarea, #search {
+  color: #329bec;
+}
+
+#new textarea:focus, #search:focus {
+  background-color: #fdff2c;
+  border: 1px solid #fff;
+  color: #111;
 }
 
 #feed {
@@ -173,10 +192,10 @@ section#messages h1 {
 #feed li {
   background-color: #fff;
   border-bottom: 2px solid #eee;
-  margin: 5px 0;
   position: relative;
   width: 100%;
   padding: 8px 0;
+  float: left;
 }
 
 #feed li.private small {
@@ -192,8 +211,8 @@ section#messages h1 {
   font-weight: bold;
   z-index: 2;
   position: absolute;
-  left: 128px;
-  top: 10px;
+  right: 2px;
+  top: 2px;
 }
 
 #feed li .para {
@@ -206,6 +225,12 @@ section#messages h1 {
   max-height: 500px;
   padding-bottom: 10px;
   padding-right: 10px;
+}
+
+#feed li.empty {
+  padding: 10px;
+  font-size: 1.6rem;
+  line-height: 1.8rem;
 }
 
 #feed li .avatars {
@@ -230,7 +255,7 @@ section#messages h1 {
   background-color: rgba(255, 255, 255, 0.8);
   color: #888;
   bottom: 0;
-  font-size: 1rem;
+  font-size: 0.9rem;
   padding: 2px;
   position: absolute;
   right: 0;
