remove backend db

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,16 +1,17 @@
 extend layout
 
 block content
-  input#search(autocomplete='off', placeholder='SEARCH')
+  input#search(autocomplete='off', placeholder='search')
   section#users
-    p.loading Loading users ...
+    .loading Loading users ...
+  .separator
   section#messages
+    .subheader
+      h1 Welcome
     div.info
       h2 Select the person you want to message on the left.
       h3 By default, messages are sent encrypted and set as private.
       h3 If you want everyone to see, check the public option before sending. These will not be encrypted.
-    .subheader
-      h1
     form#new(method='POST')
       input(type='checkbox', name='public')
       span make public? (defaults to private)
