reintroduce db for outgoing encrypted msgs only; changed to include local socket server

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,4 +13,5 @@ html
     .wrapper
       block content
 
+    script(type='text/javascript', src='/socket.io/socket.io.js')
     script(type='text/javascript', src='/js/bundle.js', defer)
