--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,5 +13,5 @@ html
     .wrapper
       block content
 
-    script(type='text/javascript', src='/socket.io/socket.io.js')
+    script(type='text/javascript', src='https://cdn.socket.io/socket.io-1.0.0.js')
     script(type='text/javascript', src='/js/bundle.js', defer)
