--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,11 +4,12 @@ body, html, body > * {
 }
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 100;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  font-weight: 200;
 }
 
 .wrapper {
@@ -30,11 +31,12 @@ header p {
   clear: both;
   padding: 5px 15px 4px 5px;
   width: 192px;
+  letter-spacing: 1px;
 }
 
 footer, header p {
-  background-color: #111;
-  color: #eee;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #111;
 }
 
 a, section#users p:hover, section#users p.selected, #actions button.on, #actions button:hover {
@@ -55,8 +57,8 @@ section, footer, header {
 }
 
 .subheader {
-  background-color: #111;
-  border-left: 5px solid #fff;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-left: 5px solid #111;
   height: 44px;
   position: fixed;
   top: 0;
@@ -66,7 +68,8 @@ section, footer, header {
 }
 
 #search {
-  border: 1px solid #111;
+  background-color: transparent;
+  border: 1px solid #ccc;
   border-right: 0;
   display: block;
   font-size: 1.2rem;
@@ -131,10 +134,10 @@ section#users p {
 }
 
 section#users p span {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.7);
   color: #111;
-  font-size: 1.3rem;
-  line-height: 1.1rem;
+  font-size: 1.7rem;
+  line-height: 1.7rem;
   display: inline-block;
   bottom: 0;
   left: 0;
@@ -155,7 +158,7 @@ section#messages h1 {
   font-size: 2.2rem;
   line-height: 2.8rem;
   margin-left: 10px;
-  color: #eee;
+  color: #111;
 }
 
 #new {
@@ -166,7 +169,7 @@ section#messages h1 {
 
 #new textarea {
   border: 1px solid #111;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 500;
   font-size: 1.2rem;
   resize: none;
