--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,12 +4,9 @@ body, html, body > * {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 100;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
+  font-family: Roboto, sans-serif;
   font-weight: 200;
+
 }
 
 .wrapper {
@@ -59,7 +56,8 @@ section, footer, header {
 .subheader {
   background-color: rgba(255, 255, 255, 0.8);
   border-left: 5px solid #111;
-  height: 44px;
+  border-bottom: 1px solid #111;
+  height: 43px;
   position: fixed;
   top: 0;
   left: 212px;
@@ -69,7 +67,7 @@ section, footer, header {
 
 #search {
   background-color: transparent;
-  border: 1px solid #ccc;
+  border: 1px solid #111;
   border-right: 0;
   display: block;
   font-size: 1.2rem;
@@ -150,7 +148,7 @@ section#users p span {
 section#messages {
   position: relative;
   width: 700px;
-  margin-left: 211px;
+  margin-left: 212px;
   height: 100%;
 }
 
@@ -163,13 +161,13 @@ section#messages h1 {
 
 #new {
   display: none;
-  padding: 53px 10px 5px 10px;
+  padding: 53px 15px 5px 15px;
   width: 90%;
 }
 
 #new textarea {
   border: 1px solid #111;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 1.2rem;
   resize: none;
@@ -189,15 +187,15 @@ section#messages h1 {
 }
 
 #feed {
-  padding: 15px 10px 10px;
+  padding: 15px 5px 10px;
 }
 
 #feed li {
   background-color: #fff;
-  border-bottom: 2px solid #eee;
+  border-bottom: 1px solid #eee;
   position: relative;
   width: 100%;
-  padding: 8px 0;
+  padding: 8px 5px;
   float: left;
 }
 
@@ -211,7 +209,7 @@ section#messages h1 {
   text-align: center;
   font-size: 0.8rem;
   line-height: 1.3rem;
-  font-weight: bold;
+  font-weight: 500;
   z-index: 2;
   position: absolute;
   right: 2px;
@@ -259,22 +257,25 @@ section#messages h1 {
   color: #888;
   bottom: 0;
   font-size: 0.9rem;
-  padding: 2px;
+  padding: 5px 2px;
   position: absolute;
   right: 0;
 }
 
 input[type="checkbox"] {
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
 }
 
 button[type="submit"] {
   border: 0;
   width: 100px;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
+  line-height: 1.6rem;
   display: inline-block;
   float: right;
+  margin-top: 1px;
+  font-weight: 200;
   background-color: #111;
   color: #eee;
 }
