--- a/views/index.jade
+++ b/views/index.jade
@@ -20,4 +20,6 @@ block content
       input(type='hidden', name='senderAvatar', id='sender-avatar')
       input(type='hidden', name='receiverAvatar', id='receiver-avatar')
       button(type='submit') send
+      .blocker
+        p Encrypting, please hold ...
     ol#feed
