blocker position fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -56,7 +56,7 @@ section, footer, header {
 .blocker {
   position: absolute;
   display: none;
-  left: 0;
+  left: 5px;
   top: 0;
   right: 0;
   bottom: 0;
