fix embed margin

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -264,8 +264,8 @@ section#messages h1 {
   position: relative;
 }
 
-#feed li img {
-  margin-top: -20px;
+#feed .image-wrapper {
+  margin: 10px 0;
 }
 
 #feed time {
