--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,10 @@ block content
   section#messages
     .subheader
       h1 Welcome
+      #error
+        h2 An error occurred:&#xa0;
+        span
+        p
     div.info
       h2 Select the person you want to message on the left.
       h3 By default, messages are sent encrypted and set as private.
