added public feeds to local

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,7 @@ block content
   section#messages
     .subheader
       h1 Welcome
+      h2 Public feed
       #error
         h2 An error occurred:&#xa0;
         span
@@ -28,3 +29,5 @@ block content
       .blocker
         p Encrypting, please hold ...
     ol#feed
+  section#public
+    ol#public-feed
