--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,7 +11,7 @@ body {
 
 .wrapper {
   position: relative;
-  width: 892px;
+  width: 1350px;
   height: 100%;
 }
 
@@ -74,12 +74,11 @@ section, footer, header {
 
 .subheader {
   background-color: rgba(255, 255, 255, 0.8);
-  border-left: 5px solid #111;
   border-bottom: 1px solid #111;
   height: 43px;
   position: fixed;
   top: 0;
-  left: 212px;
+  left: 195px;
   right: 0;
   z-index: 3;
 }
@@ -94,11 +93,12 @@ section, footer, header {
   font-weight: 200;
   clear: both;
   float: left;
-  width: 182px;
+  width: 155px;
   position: fixed;
   padding: 0 5px 0 30px;
   top: 43px;
   left: 0;
+  z-index: 4;
 }
 
 section#users, section#messages, #search {
@@ -127,7 +127,7 @@ section#users, section#messages, #search {
 
 .separator {
   position: fixed;
-  left: 212px;
+  left: 190px;
   top: 0;
   bottom: 0;
   width: 5px;
@@ -137,7 +137,7 @@ section#users, section#messages, #search {
 section#users {
   background-color: #fff;
   margin-bottom: 10px;
-  width: 212px;
+  width: 190px;
   position: fixed;
   bottom: 0;
   overflow: auto;
@@ -154,29 +154,51 @@ section#users p {
 
 section#users p span {
   color: #111;
-  font-size: 1.6rem;
-  line-height: 1.7rem;
+  font-size: 1.3rem;
+  line-height: 1.5rem;
   display: inline-block;
   bottom: 0;
   left: 25px;
   position: absolute;
   padding: 2px 5px;
   z-index: 2;
-  width: 190px;
+  width: 155px;
 }
 
 section#messages {
   position: relative;
-  width: 700px;
-  margin-left: 212px;
+  width: 550px;
+  padding-left: 190px;
   height: 100%;
 }
 
-section#messages h1 {
+section#messages .subheader h1, section#messages .subheader h2 {
+  display: inline-block;
   font-size: 2.2rem;
   line-height: 2.8rem;
-  margin-left: 10px;
   color: #111;
+}
+
+section#messages .subheader h1 {
+  margin-left: 10px;
+}
+
+section#messages .subheader h2 {
+  left: 575px;
+  padding-left: 10px;
+  position: absolute;
+  border-left: 5px solid #111;
+}
+
+section#public {
+  background-color: #fff;
+  border-left: 5px solid #111;
+  position: fixed;
+  width: 550px;
+  left: 770px;
+  top: 44px;
+  bottom: 0;
+  overflow: auto;
 }
 
 #new {
@@ -195,7 +217,7 @@ section#messages h1 {
   resize: none;
   height: 82px;
   padding: 5px;
-  width: 80%;
+  width: 75%;
 }
 
 #new textarea, #search {
@@ -204,19 +226,27 @@ section#messages h1 {
 
 #new textarea:focus, #search:focus {
   background-color: #fdff2c;
-  border: 1px solid #fff;
   color: #111;
 }
 
-#feed {
+#new textarea:focus {
+  border: 1px solid #fff;
+}
+
+#search:focus {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+
+#feed, #public-feed {
   padding: 15px 5px 10px;
 }
 
-#feed li {
+#feed li, #public-feed li {
   background-color: #fff;
   border-bottom: 1px solid #eee;
   position: relative;
-  width: 100%;
+  width: 95%;
   padding: 8px 5px;
   float: left;
 }
@@ -233,11 +263,11 @@ section#messages h1 {
   top: 2px;
 }
 
-#feed li .para {
+#feed li .para, #public-feed li .para {
   font-size: 1.2rem;
   line-height: 1.4rem;
   min-height: 60px;
-  margin-left: 160px;
+  margin-left: 90px;
   overflow-x: hidden;
   overflow-y: auto;
   max-height: 600px;
@@ -251,25 +281,29 @@ section#messages h1 {
   line-height: 1.8rem;
 }
 
-#feed li .avatars {
+#feed li .avatars img, #public-feed li .avatars img {
+  width: 80px;
+}
+
+#feed li .avatars, #public-feed li .avatars {
   float: left;
   height: 40px;
-  width: 100px;
+  width: 80px;
   position: relative;
 }
 
-#feed li .avatars div {
+#feed li .avatars div, #public-feed li .avatars div {
   height: 70px;
-  width: 150px;
+  width: 80px;
   overflow: hidden;
   position: relative;
 }
 
-#feed .image-wrapper {
+#feed .image-wrapper, #public-feed .image-wrapper {
   margin: 10px 0;
 }
 
-#feed time {
+#feed time, #public-feed time {
   background-color: rgba(255, 255, 255, 0.8);
   color: #888;
   bottom: 0;
