--- a/views/index.jade
+++ b/views/index.jade
@@ -7,8 +7,8 @@ block content
   .separator
   section#messages
     .subheader
-      h1 Welcome
-      h2 Public feed
+      h1 welcome
+      h2 public feed
       #error
         span
         p
