--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title rvlvvr
     meta(content='width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0', name='viewport')
     meta(content='yes', name='apple-mobile-web-app-capable')
+    meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
     link(rel='stylesheet', href='//brick.a.ssl.fastly.net/Roboto:200,300,500/')
     link(rel='stylesheet', href='/css/reset.css')
     link(rel='stylesheet', href='/css/main.css')
